# LLM4MalEval

./: .gitignore  README.md  annotate_sample.py  main.py  statistics_llm_results_codemixture.py  statistics_llm_results_obfuscation.py  statistics_llm_results_realworld_benign.py  statistics_llm_results_realworld_malicious.py  statistics_mannual_verify.py
inject/: README.md  injector.py  run_injector.sh
llms/: deepseek.py  gpt.py  llama.py  llm_base.py  qwen.py
malicious_packages_benchmark/malicious_packages_384/attrsmarkup-0.1.0/attrsmarkup-0.1.0/: PKG-INFO  README.md  pyproject.toml
malicious_packages_benchmark/malicious_packages_384/attrsmarkup-0.1.0/attrsmarkup-0.1.0/attrsmarkup/: __init__.py  am.py
malicious_packages_benchmark/malicious_packages_384/bip39_mnemonic_decrypt-1.0.0/bip39_mnemonic_decrypt-1.0.0/: pyproject.toml  setup.cfg
malicious_packages_benchmark/malicious_packages_384/bip39_mnemonic_decrypt-1.0.0/bip39_mnemonic_decrypt-1.0.0/src/bip39_mnemonic_decrypt/: __init__.py
malicious_packages_benchmark/malicious_packages_384/bip39_mnemonic_decrypt-1.0.0/bip39_mnemonic_decrypt-1.0.0/src/bip39_mnemonic_decrypt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
malicious_packages_benchmark/malicious_packages_384/discordrolex-0.0.1/discordrolex-0.0.1/: PKG-INFO  pyproject.toml
malicious_packages_benchmark/malicious_packages_384/discordrolex-0.0.1/discordrolex-0.0.1/src/discordrolex/: discordrol.py
malicious_packages_benchmark/malicious_packages_384/discordrolex-0.0.1/discordrolex-0.0.1/src/discordrolex.egg-info/: SOURCES.txt  top_level.txt
malicious_packages_benchmark/malicious_packages_384/django-log-tracker-1.0.4/django-log-tracker-1.0.4/: PKG-INFO  pyproject.toml
malicious_packages_benchmark/malicious_packages_384/django-log-tracker-1.0.4/django-log-tracker-1.0.4/src/django-log-tracker/: __init__.py  exemple.py
malicious_packages_benchmark/malicious_packages_384/django-log-tracker-1.0.4/django-log-tracker-1.0.4/src/django_log_tracker.egg-info/: SOURCES.txt  top_level.txt
malicious_packages_benchmark/malicious_packages_384/eth_account_api-0.0.4/eth_account_api-0.0.4/: PKG-INFO  pyproject.toml
malicious_packages_benchmark/malicious_packages_384/eth_account_api-0.0.4/eth_account_api-0.0.4/eth_account_api/: __init__.py  account.py  hdwallet_features.py  messages.py
malicious_packages_benchmark/malicious_packages_384/eth_account_api-0.0.4/eth_account_api-0.0.4/eth_account_api/_utils/: signing.py  transaction_utils.py
malicious_packages_benchmark/malicious_packages_384/eth_account_api-0.0.4/eth_account_api-0.0.4/eth_account_api/_utils/encode_typed_data/: encoding_and_hashing.py
malicious_packages_benchmark/malicious_packages_384/eth_account_api-0.0.4/eth_account_api-0.0.4/eth_account_api/signers/: base.py  local.py
malicious_packages_benchmark/malicious_packages_384/glovo-data-platform-declarative-airflow-999.9.11/glovo-data-platform-declarative-airflow-999.9.11/: PKG-INFO  pyproject.toml
malicious_packages_benchmark/malicious_packages_384/hypixelmcapi-1.0.13/hypixelmcapi-1.0.13/: PKG-INFO  README.md  pyproject.toml
malicious_packages_benchmark/malicious_packages_384/hypixelmcapi-1.0.13/hypixelmcapi-1.0.13/src/: hypixelmcapi.py
malicious_packages_benchmark/malicious_packages_384/hypixelmcapi-1.0.13/hypixelmcapi-1.0.13/src/hypixelmcapi.egg-info/: SOURCES.txt  top_level.txt
malicious_packages_benchmark/malicious_packages_384/isred-4.1.2/isred-4.1.2/: PKG-INFO  README.md  pyproject.toml
malicious_packages_benchmark/malicious_packages_384/isred-4.1.2/isred-4.1.2/isred/: __init__.py  main.py
malicious_packages_benchmark/malicious_packages_384/mlp-data-product-producer-999.9.11/mlp-data-product-producer-999.9.11/: PKG-INFO  pyproject.toml
malicious_packages_benchmark/malicious_packages_384/mlp-data-product-producer-999.9.11/mlp-data-product-producer-999.9.11/mlp_data_product_producer/: __init__.py
malicious_packages_benchmark/malicious_packages_384/mlp-data-product-producer-999.9.11/mlp-data-product-producer-999.9.11/mlp_data_product_producer.egg-info/: SOURCES.txt  top_level.txt
malicious_packages_benchmark/malicious_packages_384/netfetcher-1.7.5/netfetcher-1.7.5/: PKG-INFO  pyproject.toml
malicious_packages_benchmark/malicious_packages_384/netfetcher-1.7.5/netfetcher-1.7.5/src/netfetcher/: __init__.py
malicious_packages_benchmark/malicious_packages_384/pdsuax4-0.0.1/pdsuax4-0.0.1/: pyproject.toml  setup.py
malicious_packages_benchmark/malicious_packages_384/pdsuax4-0.0.1/pdsuax4-0.0.1/src/pdsuax4/: __init__.py
malicious_packages_benchmark/malicious_packages_384/pdsuax4-0.0.1/pdsuax4-0.0.1/src/pdsuax4.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
malicious_packages_benchmark/malicious_packages_384/pyfetcher-1.7.2/pyfetcher-1.7.2/: PKG-INFO  pyproject.toml
malicious_packages_benchmark/malicious_packages_384/pysigner-0.0.1/pysigner-0.0.1/: PKG-INFO  pyproject.toml
malicious_packages_benchmark/malicious_packages_384/pysigner-0.0.1/pysigner-0.0.1/pysigner/: core.py
malicious_packages_benchmark/malicious_packages_384/pysigner-0.0.1/pysigner-0.0.1/pysigner.egg-info/: SOURCES.txt  top_level.txt
malicious_packages_benchmark/malicious_packages_384/pytorche-0.0.1/pytorche-0.0.1/: README.md  pyproject.toml  setup.py
malicious_packages_benchmark/malicious_packages_384/pytorche-0.0.1/pytorche-0.0.1/pytorche/: __init__.py
malicious_packages_benchmark/malicious_packages_384/pytorche-0.0.1/pytorche-0.0.1/pytorche.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
malicious_packages_benchmark/malicious_packages_384/solana_transaction-0.1.0/solana_transaction-0.1.0/: PKG-INFO  pyproject.toml
malicious_packages_benchmark/malicious_packages_384/solana_transaction-0.1.0/solana_transaction-0.1.0/src/solana_transaction/: transaction.py
malicious_packages_benchmark/malicious_packages_384/uconst-1.0.0rc1/uconst-1.0.0rc1/: PKG-INFO  README.md  pyproject.toml  setup.py
malicious_packages_benchmark/malicious_packages_384/uconst-1.0.0rc1/uconst-1.0.0rc1/uconst/: __init__.py  __version__.py  const.py  constructor.py
(+3613 files in other folders)
