[tool.poetry]
name = "attrsmarkup"
version = "0.1.0"
description = ""
authors = ["Daniel Konopka <daniel@konopka.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
attrs = "^23.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
