[project]
name = "discordrolex"
version = "0.0.1"
authors = [
  { name="hartha98" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hartha98/project"
Issues = "https://github.com/hartha98/project/issues"