# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypixelmcapi"
version = "1.0.13"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"