[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netfetcher"
version = "1.7.5"
authors = [
  { name="SwisssDT", email="Swisss@42.fr" },
]
description = "NetFetch for Windows"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
