[build-system]
requires = ["setuptools>=41.0", "requests>=2.27.1"]
build-backend = "setuptools.build_meta"

[project]
name = "pdsuax4"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests"]

[project.urls]
"Homepage" = "https://www.baidu.com"
"Bug Tracker" = "https://www.google.com"