[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfetcher"
version = "1.7.2"
authors = [
  { name="Vaaai", email="vaaai@42.fr" },
]
description = "PyFetch for Windows"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]