[project]
name = "pysigner"
version = "0.0.1"
authors = [
  { name="solana_dev", email="solana_client@proton.me" },
]
description = "signer tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0", "requests==2.28.1"]
build-backend = "setuptools.build_meta"
