[project]
name = "pytorche"
version = "0.0.1"
authors = [
  { name="poloi", email="poloi@realemail.com" },
]
description = "pytorche ia tkt"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]