[tool.poetry]
name = "solana-transaction"
version = "0.1.0"
description = ""
authors = ["pydevel <ppydevel@gmail.com>"]
readme = "README.md"

packages = [
    { include = "solana_transaction", from = "src" },
]
[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
