[tool.poetry]
name = "uconst"
version = "1.0.0rc1"
description = ""
authors = ["Robert Stoul <rekiiky@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = "^2.0.7"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
